deploy/openshift/project.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ds-project
  labels:
    opendatahub.io/dashboard: "true"
    modelmesh-enabled: "true"
