deploy/openshift/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: elastic-vector
  name: gpt-java-chatbot-service
spec:
  selector:
    app: gpt-java-chatbot
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: elastic-vector
  name: gpt-java-chatbot-route
spec:
  to:
    kind: Service
    name: gpt-java-chatbot-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: gpt-java-chatbot
  namespace: elastic-vector
  labels:
    app: gpt-java-chatbot
spec:
  replicas: 1
  selector:
    app: gpt-java-chatbot
  strategy:
    type: Rolling # Use default rolling update parameters
  template:
    metadata:
      labels:
        app: gpt-java-chatbot
    spec:
      containers:
        - name: gpt-java-chatbot-app
          image: quay.io/sshaaf/gpt-java-chatbot:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /deployments/config
              name: es-cert-volume
              readOnly: true
      serviceAccountName: gpt-java-chatbot
      volumes:
        - name: es-cert-volume
          secret:
            defaultMode: 384
            optional: false
            secretName: elasticsearch-sample-es-http-certs-public
  triggers:
    - type: ConfigChange # Redeploy when DC changes
